// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PodDetails should match snapshot with container based pod and with multiple containers 1`] = `
<body>
  <div>
    <div
      class="relative pb-4 pl-4 pr-20 pt-3"
    >
      <a
        class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-xs h-7 px-2 rounded border border-neutral-250 dark:border-neutral-400 text-neutral-400 dark:text-white hover:[&:not(:active)]:border-neutral-300 dark:hover:[&:not(:active):not(:disabled)]:border-neutral-350 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-neutral-100 dark:bg-neutral-500 hover:[&:not(:active):not(:disabled)]:bg-white dark:hover:[&:not(:active):not(:disabled)]:bg-neutral-400 absolute right-2 top-2 gap-2"
        href="/organization//project//environment//logs/1/service-logs"
        type="button"
      >
        Logs
        <i
          aria-hidden="true"
          class="fa-solid fa-scroll "
        />
      </a>
      <div
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          aria-orientation="horizontal"
          class="flex gap-1 overflow-x-auto whitespace-nowrap"
          data-orientation="horizontal"
          role="tablist"
          style="outline: none;"
          tabindex="0"
        >
          <button
            aria-controls="radix-:rm:-content-pod-container-1"
            aria-selected="true"
            class="relative flex items-center justify-center shrink-0 select-none box-border hover:text-brand-500 hover:border-brand-500 border-neutral-250 dark:border-neutral-350 data-[state=active]:border-brand-500 dark:data-[state=active]:border-brand-500 data-[state=active]:text-brand-500 dark:data-[state=active]:text-white dark:hover:text-white disabled:border-neutral-200 disabled:text-neutral-300 dark:disabled:border-neutral-400 dark:disabled:text-neutral-350 transition text-neutral-350 dark:text-neutral-300 rounded-full text-2xs px-2 h-5 font-semibold border"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="active"
            id="radix-:rm:-trigger-pod-container-1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="absolute flex items-center justify-center"
            >
              <div
                class="mr-1 h-1.5 w-1.5 rounded-full bg-green-500"
              />
              pod-container-1
            </span>
            <span
              class="invisible flex items-center justify-center"
            >
              <div
                class="mr-1 h-1.5 w-1.5 rounded-full bg-green-500"
              />
              pod-container-1
            </span>
          </button>
          <button
            aria-controls="radix-:rm:-content-pod-container-2"
            aria-selected="false"
            class="relative flex items-center justify-center shrink-0 select-none box-border hover:text-brand-500 hover:border-brand-500 border-neutral-250 dark:border-neutral-350 data-[state=active]:border-brand-500 dark:data-[state=active]:border-brand-500 data-[state=active]:text-brand-500 dark:data-[state=active]:text-white dark:hover:text-white disabled:border-neutral-200 disabled:text-neutral-300 dark:disabled:border-neutral-400 dark:disabled:text-neutral-350 transition text-neutral-350 dark:text-neutral-300 rounded-full text-2xs px-2 h-5 font-semibold border"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="inactive"
            id="radix-:rm:-trigger-pod-container-2"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="absolute flex items-center justify-center"
            >
              <div
                class="mr-1 h-1.5 w-1.5 rounded-full bg-red-500"
              />
              pod-container-2
            </span>
            <span
              class="invisible flex items-center justify-center"
            >
              <div
                class="mr-1 h-1.5 w-1.5 rounded-full bg-red-500"
              />
              pod-container-2
            </span>
          </button>
        </div>
        <div
          class="mt-3"
        >
          <div
            aria-labelledby="radix-:rm:-trigger-pod-container-1"
            class="relative outline-0"
            data-orientation="horizontal"
            data-state="active"
            id="radix-:rm:-content-pod-container-1"
            role="tabpanel"
            style="animation-duration: 0s;"
            tabindex="0"
          >
            <dl
              class="grid gap-2 grid-cols-[20px_100px_minmax(0,_1fr)] gap-x-2 gap-y-0"
            >
              <dt
                class="text-neutral-350 dark:text-neutral-300 col-span-2 mb-2"
              >
                Container image:
              </dt>
              <dd
                class="font-medium text-neutral-400 dark:font-normal dark:text-white mb-2 flex gap-1"
              >
                foobar-img
              </dd>
              <div
                class="relative flex flex-col items-center"
              >
                <div
                  class="grid items-center gap-2"
                >
                  <svg
                    class="z-10 bg-neutral-700"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="8"
                      cy="8"
                      r="3.75"
                      stroke="#67778E"
                      stroke-width="1.5"
                    />
                  </svg>
                </div>
              </div>
              <dt
                class="text-neutral-350 dark:text-neutral-300"
              >
                Current status:
              </dt>
              <dd
                class="font-medium text-neutral-400 dark:font-normal dark:text-white"
              >
                <span>
                  ✅ Running
                </span>
              </dd>
            </dl>
          </div>
          <div
            aria-labelledby="radix-:rm:-trigger-pod-container-2"
            class="relative outline-0"
            data-orientation="horizontal"
            data-state="inactive"
            hidden=""
            id="radix-:rm:-content-pod-container-2"
            role="tabpanel"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PodDetails should match snapshot with git based pod and with last_terminated_state 1`] = `
<body>
  <div>
    <div
      class="relative pb-4 pl-4 pr-20 pt-3"
    >
      <a
        class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-xs h-7 px-2 rounded border border-neutral-250 dark:border-neutral-400 text-neutral-400 dark:text-white hover:[&:not(:active)]:border-neutral-300 dark:hover:[&:not(:active):not(:disabled)]:border-neutral-350 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-neutral-100 dark:bg-neutral-500 hover:[&:not(:active):not(:disabled)]:bg-white dark:hover:[&:not(:active):not(:disabled)]:bg-neutral-400 absolute right-2 top-2 gap-2"
        href="/organization//project//environment//logs/1/service-logs"
        type="button"
      >
        Logs
        <i
          aria-hidden="true"
          class="fa-solid fa-scroll "
        />
      </a>
      <div
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          aria-orientation="horizontal"
          class="gap-1 overflow-x-auto whitespace-nowrap hidden"
          data-orientation="horizontal"
          role="tablist"
          style="outline: none;"
          tabindex="0"
        >
          <button
            aria-controls="radix-:re:-content-pod-container-1"
            aria-selected="true"
            class="relative flex items-center justify-center shrink-0 select-none box-border hover:text-brand-500 hover:border-brand-500 border-neutral-250 dark:border-neutral-350 data-[state=active]:border-brand-500 dark:data-[state=active]:border-brand-500 data-[state=active]:text-brand-500 dark:data-[state=active]:text-white dark:hover:text-white disabled:border-neutral-200 disabled:text-neutral-300 dark:disabled:border-neutral-400 dark:disabled:text-neutral-350 transition text-neutral-350 dark:text-neutral-300 rounded-full text-2xs px-2 h-5 font-semibold border"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="active"
            id="radix-:re:-trigger-pod-container-1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="absolute flex items-center justify-center"
            >
              <div
                class="mr-1 h-1.5 w-1.5 rounded-full bg-green-500"
              />
              pod-container-1
            </span>
            <span
              class="invisible flex items-center justify-center"
            >
              <div
                class="mr-1 h-1.5 w-1.5 rounded-full bg-green-500"
              />
              pod-container-1
            </span>
          </button>
        </div>
        <div
          class="mt-3"
        >
          <div
            aria-labelledby="radix-:re:-trigger-pod-container-1"
            class="relative outline-0"
            data-orientation="horizontal"
            data-state="active"
            id="radix-:re:-content-pod-container-1"
            role="tabpanel"
            style="animation-duration: 0s;"
            tabindex="0"
          >
            <dl
              class="grid gap-2 grid-cols-[20px_100px_minmax(0,_1fr)] gap-x-2 gap-y-0"
            >
              <div
                class="relative flex flex-col items-center"
              >
                <div
                  class="absolute left-1/2 min-h-full -translate-x-1/2 border-l border-neutral-350"
                />
                <div
                  class="grid items-center gap-2"
                >
                  <svg
                    class="z-10 bg-neutral-700"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="8"
                      cy="8"
                      r="3.75"
                      stroke="#67778E"
                      stroke-width="1.5"
                    />
                  </svg>
                </div>
              </div>
              <dt
                class="text-neutral-350 dark:text-neutral-300 mb-2"
              >
                Current status:
              </dt>
              <dd
                class="font-medium text-neutral-400 dark:font-normal dark:text-white mb-2"
              >
                <span>
                  ✅ Running
                </span>
              </dd>
              <div
                class="relative flex flex-col items-center"
              >
                <div
                  class="absolute left-1/2 min-h-full -translate-x-1/2 border-l border-neutral-350"
                />
                <div
                  class="grid gap-2"
                >
                  <svg
                    class="z-10 bg-neutral-700"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="8"
                      cy="8"
                      r="3.75"
                      stroke="#67778E"
                      stroke-width="1.5"
                    />
                  </svg>
                </div>
              </div>
              <dt
                class="text-neutral-350 dark:text-neutral-300"
              >
                10 Oct, 2023, 07:36:26
              </dt>
              <dd
                class="font-medium text-neutral-400 dark:font-normal dark:text-white"
              >
                Baz reason
                : 
                baz
                 
                (
                1
                ).
                 
                If you want to clear this warning state, redeploy the service.
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PodDetails should match snapshot with git based pod and without last_terminated_state 1`] = `
<body>
  <div>
    <div
      class="relative pb-4 pl-4 pr-20 pt-3"
    >
      <a
        class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-xs h-7 px-2 rounded border border-neutral-250 dark:border-neutral-400 text-neutral-400 dark:text-white hover:[&:not(:active)]:border-neutral-300 dark:hover:[&:not(:active):not(:disabled)]:border-neutral-350 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-neutral-100 dark:bg-neutral-500 hover:[&:not(:active):not(:disabled)]:bg-white dark:hover:[&:not(:active):not(:disabled)]:bg-neutral-400 absolute right-2 top-2 gap-2"
        href="/organization//project//environment//logs/1/service-logs"
        type="button"
      >
        Logs
        <i
          aria-hidden="true"
          class="fa-solid fa-scroll "
        />
      </a>
      <div
        data-orientation="horizontal"
        dir="ltr"
      >
        <div
          aria-orientation="horizontal"
          class="gap-1 overflow-x-auto whitespace-nowrap hidden"
          data-orientation="horizontal"
          role="tablist"
          style="outline: none;"
          tabindex="0"
        >
          <button
            aria-controls="radix-:r6:-content-pod-container-1"
            aria-selected="true"
            class="relative flex items-center justify-center shrink-0 select-none box-border hover:text-brand-500 hover:border-brand-500 border-neutral-250 dark:border-neutral-350 data-[state=active]:border-brand-500 dark:data-[state=active]:border-brand-500 data-[state=active]:text-brand-500 dark:data-[state=active]:text-white dark:hover:text-white disabled:border-neutral-200 disabled:text-neutral-300 dark:disabled:border-neutral-400 dark:disabled:text-neutral-350 transition text-neutral-350 dark:text-neutral-300 rounded-full text-2xs px-2 h-5 font-semibold border"
            data-orientation="horizontal"
            data-radix-collection-item=""
            data-state="active"
            id="radix-:r6:-trigger-pod-container-1"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <span
              class="absolute flex items-center justify-center"
            >
              <div
                class="mr-1 h-1.5 w-1.5 rounded-full bg-green-500"
              />
              pod-container-1
            </span>
            <span
              class="invisible flex items-center justify-center"
            >
              <div
                class="mr-1 h-1.5 w-1.5 rounded-full bg-green-500"
              />
              pod-container-1
            </span>
          </button>
        </div>
        <div
          class="mt-3"
        >
          <div
            aria-labelledby="radix-:r6:-trigger-pod-container-1"
            class="relative outline-0"
            data-orientation="horizontal"
            data-state="active"
            id="radix-:r6:-content-pod-container-1"
            role="tabpanel"
            style="animation-duration: 0s;"
            tabindex="0"
          >
            <dl
              class="grid gap-2 grid-cols-[20px_100px_minmax(0,_1fr)] gap-x-2 gap-y-0"
            >
              <div
                class="relative flex flex-col items-center"
              >
                <div
                  class="grid items-center gap-2"
                >
                  <svg
                    class="z-10 bg-neutral-700"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="8"
                      cy="8"
                      r="3.75"
                      stroke="#67778E"
                      stroke-width="1.5"
                    />
                  </svg>
                </div>
              </div>
              <dt
                class="text-neutral-350 dark:text-neutral-300"
              >
                Current status:
              </dt>
              <dd
                class="font-medium text-neutral-400 dark:font-normal dark:text-white"
              >
                <span>
                  ✅ Running
                </span>
              </dd>
            </dl>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PodDetails should match snapshot with pod error with 0 containers 1`] = `
<body>
  <div>
    <div
      class="relative pb-4 pl-4 pr-20 pt-3"
    >
      <a
        class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-brand-500 text-xs h-7 px-2 rounded border border-neutral-250 dark:border-neutral-400 text-neutral-400 dark:text-white hover:[&:not(:active)]:border-neutral-300 dark:hover:[&:not(:active):not(:disabled)]:border-neutral-350 active:bg-neutral-150 disabled:text-neutral-300 disabled:bg-neutral-100 disabled:border-none bg-neutral-100 dark:bg-neutral-500 hover:[&:not(:active):not(:disabled)]:bg-white dark:hover:[&:not(:active):not(:disabled)]:bg-neutral-400 absolute right-2 top-2 gap-2"
        href="/organization//project//environment//logs/1/service-logs?pod_name=app-z0fb41d62-5c7fdb6f5f-44wpd"
        type="button"
      >
        Logs
        <i
          aria-hidden="true"
          class="fa-solid fa-scroll "
        />
      </a>
      <dl
        class="grid gap-2 grid-cols-[20px_100px_minmax(0,_1fr)] gap-x-2 gap-y-0"
      >
        <div
          class="relative flex flex-col items-center"
        >
          <div
            class="grid items-center gap-2"
          >
            <svg
              class="z-10 bg-neutral-700"
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="8"
                cy="8"
                r="3.75"
                stroke="#67778E"
                stroke-width="1.5"
              />
            </svg>
          </div>
        </div>
        <dt
          class="text-neutral-350 dark:text-neutral-300"
        >
          Current status:
        </dt>
        <dd
          class="font-medium text-neutral-400 dark:font-normal dark:text-white"
        >
          <span>
            ❌ 
            Evicted
            :Pod was rejected: The node had condition: [DiskPressure]. 
          </span>
        </dd>
      </dl>
    </div>
  </div>
</body>
`;
